--- a/index.html
+++ b/index.html
@@ -275,6 +275,16 @@
                 </a>
             </div>
             <div class="col-md-2">
+                <a class="fancybox" rel="group" href="img/eng_pics/NGP_4089-lg.jpg">
+                    <div class="img-wrap">
+                        <div class="overlay">
+                            <i class="fa fa-search"></i>
+                        </div>
+                        <img src="img/eng_pics/NGP_4089-lg.jpg" alt=""/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/NGP_4119-sm.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
