--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 </section>
 
 <section id="eng-pics" class="section-padding">
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
                 <h3 class="header">Engagement Pics</h3>
