--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         their <a href="https://www.pinterest.com/ramswarooppatra/mehndi-dress-for-men/">vibrant
                         kurtas</a> with pants or pyjamas along with an optional shawl.
                     </p>
-                    <h5>Cocktail Night <span class="time">7PM - 12AM</span></h5>
+                    <h5>Sangeet & DJ Night <span class="time">7PM - 12AM</span></h5>
                     <p>
                         <strong>Western attire</strong>
                         <br>
