--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>Shreya & Saurabh are getting hitched!</title>
+    <title>Shreya & Saurabh are tying the knot!</title>
     <meta name="description" content="We would like to invite you to our big day.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
-    <meta property="og:title" content="Shreya & Saurabh getting hitched">
+    <meta property="og:title" content="Shreya & Saurabh are tying the knot">
     <meta property="og:description" content="We would like to invite you to our big day.">
     <meta property="og:type" content="website">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
@@ -74,7 +74,7 @@
                         <ul class="primary-nav">
                             <li><a href="#events">Events</a></li>
                             <li><a href="#eng-pics">Engagement</a></li>
-                            <li class="hidden-sm hidden-xs"><a href="#video-bg">Glimpse of the city</a></li>
+                            <li class="container"><a href="#video-bg">Glimpse of the city</a></li>
                         </ul>
                         <ul class="member-actions">
                             <li><a href="#map" class="login">Venue</a></li>
@@ -113,7 +113,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3>We are getting hitched</h3>
+                <h3>We are tying the knot</h3>
                 <p>The dates are 6<sup>th</sup> & 7<sup>th</sup> of December '24 and we would like you to be a part of
                     it.</p>
                 <div class="share-bar"></div>
@@ -303,7 +303,7 @@
     </div>
 </section>
 
-<section id="video-bg" class="hidden-sm hidden-xs">
+<section id="video-bg" class="container">
     <div id="bgndVideo" class="player"
          data-property="{videoURL:'https://www.youtube.com/watch?v=G75UN1Tn7to',containment:'#video-bg',autoPlay:true, mute:true, showControls:false, startAt:53, stopAt:68, opacity:1}">
         </div>
