video in folder

--- a/index.html
+++ b/index.html
@@ -304,9 +304,12 @@
 </section>
 
 <section id="video-bg" class="container">
-    <div id="bgndVideo" class="player"
+    <!-- <div id="bgndVideo" class="player"
          data-property="{videoURL:'https://www.youtube.com/watch?v=G75UN1Tn7to',containment:'#video-bg',autoPlay:true, mute:true, showControls:false, startAt:53, stopAt:68, opacity:1}">
-        </div>
+        </div> -->
+        <video id="video-bg" autoplay muted loop>
+            <source src="/video/Churu.mp4">
+        </video>
     <div id="video-content">
         <h5>Churu, Rajasthan</h5>
         <p>Gateway to Thar Desert</p>
