--- a/index.html
+++ b/index.html
@@ -307,10 +307,11 @@
     <div id="bgndVideo" class="player"
          data-property="{videoURL:'https://www.youtube.com/watch?v=G75UN1Tn7to',containment:'#video-bg',autoPlay:true, mute:true, showControls:false, startAt:53, stopAt:68, opacity:1}">
         </div>
-        <a class="fancybox" href="https://www.youtube.com/watch?v=G75UN1Tn7to"></a>
-    <div id="video-content">
+    <div id="video-content"> 
+        <a href="https://www.youtube.com/watch?v=G75UN1Tn7to" class="link-text" target="_blank">
         <h5>Churu, Rajasthan</h5>
         <p>Gateway to Thar Desert</p>
+        </a>
     </div>
 </section>
 
