churu desc change

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
     <div id="video-content"> 
         <a href="https://www.youtube.com/watch?v=G75UN1Tn7to" class="link-text" target="_blank">
         <h5>Churu, Rajasthan</h5>
-        <p>Gateway to Thar Desert</p>
+        <p>The Lost Treasure of Rajasthan</p>
         </a>
     </div>
 </section>
