churu desc change

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
         </div>
     <div id="video-content"> 
         <a href="https://www.youtube.com/watch?v=G75UN1Tn7to" class="link-text" target="_blank">
-        <h5>Churu, Rajasthan</h5>
+        <h5>Churu</h5>
         <p>The Lost Treasure of Rajasthan</p>
         </a>
     </div>
