--- a/index.html
+++ b/index.html
@@ -134,37 +134,49 @@
                 <div class="wp3">
                     <p><strong>6th December</strong></p>
 
-                    <h5>Mehndi <span class="time">1PM - 5PM</span></h5>
-                    <p>It's one of the oldest traditional Indian pre wedding ceremony where the bride and groom
-                        attend the event together and a professional mehndi artist applies
-                        mehndi to the bride's hands and feet. This will be having a celebratory
-                        festival feel to it with people wearing vibrant clothes and dancing, singing, playing
-                        games and a lot more.</p>
+                    <h5>Mehndi <span class="time">1PM - 3PM</span></h5>
+                    <p>
+                    It's one of the oldest traditional Indian pre wedding ceremony where the bride and groom attend the event together and a professional mehndi artist applies mehndi to the bride's hands and feet. 
+                    This will be having a celebratory festival feel to it with people wearing vibrant clothes and dancing, singing, playing games and a lot more.
+                    </p>
                 </div>
                 <div class="wp5">
-                    <h5>Sangeet & DJ Night <span class="time">7PM - 12AM</span></h5>
-                    <p>This event is no way close to ethnic. The bride & groom would like to have some "Thumka before the
-                        knot". With family & friends performing and the western attire on, everyone would be busy
-                        showing off their new moves on the stage which they have finely honed. Lastly, expect some amazing songs
-                        at DJ Night for sure.</p>
+                    <h5>Sangeet & DJ Night <span class="time">6PM - 12AM</span></h5>
+                    <p>
+                     This event is no way close to ethnic. The bride & groom would like to have some "Thumka before the knot". 
+                     With family & friends performing and the indo-western attire on, everyone would be busy showing off their new moves on the stage which they have finely honed. 
+                     Lastly, expect some amazing songs at DJ Night for sure.
+                    </p>
                 </div>
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12 rightcol">
                 <div class="wp4">
                     <p><strong>7th December</strong></p>
 
-                    <h5>Haldi <span class="time">10AM-11AM</span></h5>
-                    <p>The haldi ceremony is usually held separately for the bride and the groom. This one is for the
-                        bride. It is a low-key event that involves the application of turmeric paste on the hands, legs
-                        and face of the bride. The groom is not allowed to see the bride after this ritual until the
-                        final wedding ceremony starts.</p>
+                    <h5>Mayra <span class="time">10AM-11AM</span></h5>
+                    <p>
+                    The Mayra function holds significant cultural and emotional value in Jain weddings. 
+                    It symbolizes the maternal family’s blessings and support for the bride or groom, reinforcing family bonds. 
+                    The gifts brought by the maternal family are seen as a gesture of love and prosperity, ensuring the couple's well-being and happiness. 
+                    This ceremony also highlights the importance of maternal relatives in the wedding festivities, adding to the overall joy and celebration in the traditional attire.
+                    </p>
+
+                    <p></p>
+
+                    <h5>Haldi <span class="time">2PM-3PM</span></h5>
+                    <p>
+                    The haldi ceremony is usually held separately for the bride and the groom. 
+                    It is a low-key event that involves the application of turmeric paste on the hands, legs and face of the bride & groom. 
+                    The groom is not allowed to see the bride after this ritual until the final wedding ceremony starts.
+                    </p>
                 </div>
                 <div class="wp6">
                     <h5>Wedding <span class="time">6PM-12AM</span></h5>
-                    <p>This is the main event in the entire wedding when the bride and the groom tie the
-                        knot. The groom comes with the barat and is greeted by the bride side with some dhol of course
-                        as maximum number of guests would be attending this event. This is when the couple circle the
-                        sacred fire and are finally declared husband and wife.</p>
+                    <p>
+                    This is the main event in the entire wedding when the bride and the groom tie the knot. 
+                    The groom comes with the barat and is greeted by the bride side with some dhol of course as maximum number of guests would be attending this event. 
+                    This is when the couple circle the sacred fire and are finally declared husband and wife.
+                    </p>
                 </div>
             </div>
         </div>
@@ -188,9 +200,9 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span>&times;</span>
                     </button>
                     <h3 class="text-center section-padding">Ugh... dress codes?</h3>
-                    <h5>Mehndi <span class="time">1PM - 5PM</span></h5>
+                    <h5>Mehndi <span class="time">1PM - 3PM</span></h5>
                     <p>
-                        <strong>Ethnic indian wear</strong>
+                        <strong>Vibrant Indian wear</strong>
                         <br>
                         Ladies can wear something
                         <a href="https://www.pinterest.com/ramswarooppatra/mehndi-dress-for-women/">bright & vivid</a>
@@ -198,15 +210,33 @@
                         their <a href="https://www.pinterest.com/ramswarooppatra/mehndi-dress-for-men/">vibrant
                         kurtas</a> with pants or pyjamas along with an optional shawl.
                     </p>
-                    <h5>Sangeet & DJ Night <span class="time">7PM - 12AM</span></h5>
+                    <h5>Sangeet & DJ Night <span class="time">6PM - 12AM</span></h5>
                     <p>
                         <strong>Western attire</strong>
                         <br>
                         A semi-formal look that is contemporary & fashionable which is not too prim & proper is the best
                         to pull off this night. You can see some pins for
-                        <a href="https://www.pinterest.com/ramswarooppatra/cocktail-night-outfit-for-women/">ladies</a>
+                        <a href="https://www.pinterest.com/search/pins/?q=sangeet%20indo%20western%20outfit%20for%20women&rs=typed/">ladies</a>
                         & <a href="https://www.pinterest.com/ramswarooppatra/cocktail-night-outfit-for-men/">gents</a>.
                     </p>
+
+                    <h5>Mayra <span class="time">10AM-11AM</span></h5>
+                    <p>
+                        <strong>Traditional</strong>
+                        <br>
+                        A traditional look which blends into the Rajasthani style. Ladies can wear any traditional 
+                        <a href="https://www.pinterest.com/search/pins/?q=traditional%20suits%20%26%20sarees%20indian%20for%20women&rs=typed">anarkali suits/sarees</a>,
+                        and gents can wear 
+                        <a href="https://www.pinterest.com/ramswarooppatra/mehndi-dress-for-men/">Kurtas</a> with pants or pyjamas.
+                    </p> 
+
+                    <h5>Haldi <span class="time">2PM-3PM</span></h5>
+                    <p>
+                        <strong>Hues of Yellow</strong>
+                        <br>
+                        The hues of yellow dress code in the Haldi function symbolize purity, happiness, and prosperity, adding a vibrant and joyful touch to the pre-wedding celebration.
+                    </p> 
+
                     <h5>Wedding <span class="time">6PM-12AM</span></h5>
                     <p>
                         <strong>Indo-western</strong>
