--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <div class="wp4">
                     <p><strong>7th December</strong></p>
 
-                    <h5>Mayra <span class="time">10AM-11AM</span></h5>
+                    <h5>Maira <span class="time">10AM-11AM</span></h5>
                     <p>
                     The Mayra function holds significant cultural and emotional value in Jain weddings. 
                     It symbolizes the maternal family’s blessings and support for the bride or groom, reinforcing family bonds. 
@@ -220,7 +220,7 @@
                         & <a href="https://www.pinterest.com/ramswarooppatra/cocktail-night-outfit-for-men/">gents</a>.
                     </p>
 
-                    <h5>Mayra <span class="time">10AM-11AM</span></h5>
+                    <h5>Maira <span class="time">10AM-11AM</span></h5>
                     <p>
                         <strong>Traditional</strong>
                         <br>
