maira change done

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
                     <h5>Maira <span class="time">10AM-11AM</span></h5>
                     <p>
-                    The Mayra function holds significant cultural and emotional value in Jain weddings. 
+                    The Maira function holds significant cultural and emotional value in Jain weddings. 
                     It symbolizes the maternal family’s blessings and support for the bride or groom, reinforcing family bonds. 
                     The gifts brought by the maternal family are seen as a gesture of love and prosperity, ensuring the couple's well-being and happiness. 
                     This ceremony also highlights the importance of maternal relatives in the wedding festivities, adding to the overall joy and celebration in the traditional attire.
