--- a/index.html
+++ b/index.html
@@ -233,6 +233,9 @@
                         <strong>Hues of Yellow</strong>
                         <br>
                         The hues of yellow dress code in the Haldi function symbolize purity, happiness, and prosperity, adding a vibrant and joyful touch to the pre-wedding celebration.
+                        Ladies can wear <a href="https://www.pinterest.com/search/pins/?q=hues%20of%20yellow%20outfit%20for%20haldi%20women&rs=typed"> yelllow outfits</a> while gents can wear
+                        <a href="https://www.pinterest.com/search/pins/?q=hues%20of%20yellow%20outfit%20for%20haldi%20men&rs=typed"> matching yellow outfits</a> to compete with the ladies.
+                        May the brightest yellow win! 
                     </p> 
 
                     <h5>Wedding <span class="time">6PM-12AM</span></h5>
