haldi dress code added

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                         <strong>Hues of Yellow</strong>
                         <br>
                         The hues of yellow dress code in the Haldi function symbolize purity, happiness, and prosperity, adding a vibrant and joyful touch to the pre-wedding celebration.
-                        Ladies can wear <a href="https://www.pinterest.com/search/pins/?q=hues%20of%20yellow%20outfit%20for%20haldi%20women&rs=typed"> yelllow outfits</a> while gents can wear
+                        Ladies can wear <a href="https://www.pinterest.com/search/pins/?q=hues%20of%20yellow%20outfit%20for%20haldi%20women&rs=typed"> yellow outfits</a> while gents can wear
                         <a href="https://www.pinterest.com/search/pins/?q=hues%20of%20yellow%20outfit%20for%20haldi%20men&rs=typed"> matching yellow outfits</a> to compete with the ladies.
                         May the brightest yellow win! 
                     </p> 
