things to do added

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
                             <ul class="primary-nav">
                                 <li><a href="#events">Events</a></li>
                                 <li><a href="#eng-pics">Engagement</a></li>
-                                <li class="hidden-sm hidden-xs"><a href="#video-bg">Glimpse of the city</a></li>
+                                <li><a href="#video-bg">Glimpse of the city</a></li>
+                                <li><a href="https://docs.google.com/spreadsheets/d/1vyTflS_5Iaj8aoqN7oLxh1KXt0b_GL4M/edit?usp=drivesdk&ouid=113708733811772234403&rtpof=true&sd=true">Things to do near Churu</a></li>
                             </ul>
                             <ul class="member-actions">
                                 <li><a href="#map" class="login">Venue</a></li>
