directions to churu text file added

--- a/index.html
+++ b/index.html
@@ -389,6 +389,11 @@
             </div>
         </div>
     </div>
+    <div class="text-center">
+        <h3>
+        <a href="directions to churu.txt">Link to Alternate Modes of Transport to reach Churu</a>
+        </h3>
+    </div>
 </section>
 
 <section class="rsvp text-center" id="rsvp">
