changed placeholder for time and date

--- a/index.html
+++ b/index.html
@@ -448,15 +448,15 @@
                         <div class="col-md-6 col-sm-6">
                             <div class="form-input-group">
                                 <i class="fa fa-calendar"></i>
-                                <input type="date" name="date_of_arrival" required>
+                                <input name="date_of_arrival" class="" placeholder="Date of Arrival" required>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
                             <div class="form-input-group">
-                                <i class="fa fa-clock"></i>
-                                <input type="time" name="time_of_arrival" required>
+                                <i class="fa fa-clock-o"></i>
+                                <input name="time_of_arrival" class="" placeholder="Time of Arrival" required>
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6">
