changed alignment for link to alternate modes

--- a/index.html
+++ b/index.html
@@ -389,11 +389,13 @@
             </div>
         </div>
     </div>
+</section>
+<section>
     <div class="text-center">
         <h3>
         <a href="directions to churu.txt">Link to Alternate Modes of Transport to reach Churu</a>
         </h3>
-    </div>
+    </div>       
 </section>
 
 <section class="rsvp text-center" id="rsvp">
