changed link for alternative mode of transport

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 <section>
     <div class="text-center">
         <h3>
-        <a href="directions to churu.txt">Link to Alternate Modes of Transport to reach Churu</a>
+        <a href="https://alternatemodeoftransporttochuru.wordpress.com/">Link to Alternate Modes of Transport to reach Churu</a>
         </h3>
     </div>       
 </section>
