--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     </p>
                 </div>
                 <div class="wp5">
-                    <h5>Sangeet & DJ Night <span class="time">6PM - 12AM</span></h5>
+                    <h5>Milni & Sangeet/DJ <span class="time">6PM - 12AM</span></h5>
                     <p>
                      This event is no way close to ethnic. The bride & groom would like to have some "Thumka before the knot". 
                      With family & friends performing and the indo-western attire on, everyone would be busy showing off their new moves on the stage which they have finely honed. 
@@ -209,7 +209,7 @@
                         their <a href="https://www.pinterest.com/ramswarooppatra/mehndi-dress-for-men/">vibrant
                         kurtas</a> with pants or pyjamas along with an optional shawl.
                     </p>
-                    <h5>Sangeet & DJ Night <span class="time">6PM - 12AM</span></h5>
+                    <h5>Milni & Sangeet/DJ <span class="time">5PM - 12AM</span></h5>
                     <p>
                         <strong>Western attire</strong>
                         <br>
