--- a/index.html
+++ b/index.html
@@ -483,6 +483,34 @@
                         </div>
                     </div>
                     <div class="row">
+                        <div class="col-md-6 col-sm-6">
+                            <div class="form-input-group">
+                                <i class="fa fa-calendar"></i>
+                                <input name="date_of_departure" class="" placeholder="Date of Departure from Churu" required>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-sm-6">
+                            <div class="form-input-group">
+                                <i class="fa fa-clock-o"></i>
+                                <input name="time_of_departure" class="" placeholder="Time of Departure from Churu" required>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 col-sm-6">
+                            <div class="form-input-group">
+                                <i class="fa fa-info-circle"></i>
+                                <input type="text" name="details_of_transport_departure" placeholder="Flight No/Train No for Departure" optional>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-sm-6">
+                            <div class="form-input-group">
+                                <i class="fa fa-users"></i>
+                                <input type="number" name="no_of_pax_departure" min="1" max="30" placeholder="No of Pax for Departure" required>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
                         <div class="col-md-12" id="alert-wrapper"></div>
                     </div>
                     <button class="btn-fill rsvp-btn">
